# mydatabase

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml  fast.csv  manage.py  package.json  pnpm-lock.yaml  test.http  test_dataframes.ipynb
djangobackend/: .dockerignore  Pipfile  conftest.py  pyproject.toml  test.feather  testing_tasks.ipynb
djangobackend/accounts/: models.py
djangobackend/dbschemas/: admin.py  apps.py  models.py  routing.py  schema.py  tasks.py  tests.py  urls.py
djangobackend/dbschemas/api/: serializers.py  views.py
djangobackend/dbschemas/graphql/: mutations.py  schema.py  utils.py
djangobackend/dbschemas/migrations/: 0001_initial.py  0002_alter_databaseschema_options.py  0002_rename_databaase_schema_databasetable_database_schema.py  0004_databaseschema_slug.py  0005_databaseprovider.py  0006_databaseprovider_google_sheet_credentials.py  0007_databaseschema_active_databaseschema_paused.py
djangobackend/dbschemas/tests/: test_api.py  test_tasks.py  utils.py
djangobackend/dbtables/: admin.py  consumers.py  models.py  schema.py  tasks.py  tests.py  urls.py  utils.py
djangobackend/djangobackend/: asgi.py  schema.py  settings.py  urls.py  utils.py  ws_middlewares.py
djangobackend/endpoints/: admin.py  models.py  tasks.py  tests.py  urls.py  utils.py  validators.py
djangobackend/fixtures/: databases.json  users.json
djangobackend/media/: test1.csv  test2.json
djangobackend/tabledocuments/: admin.py  choices.py  consumers.py  mcp.py  models.py  routing.py  schema.py  tasks.py  tests.py  urls.py  utils.py  validation_models.py
(+656 files in other folders)
