[project]
name = "djangobackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.2",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-import-export>=4.4.0",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "graphene-django>=3.2.3",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "orjson>=3.11.7",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "pyairtable>=3.3.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "twisted[http2,tls]>=25.5.0",
    "unidecode>=1.4.0",
    "zstd>=1.5.7.3",
]
